added css and html for a popup prompt

--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
+      <div class="prompt-card" id="prompt-card">
+        <div class="prompt-header">
+          <div class="prompt-title">Choose Password Criteria</div>
+          <button class="close-button">&times;</button>
+        </div>
+        <div class="prompt-body">
+          <ul>
+            <li>Amount of Characters</li>
+            <li>uppercase</li>
+            <li>lowercase</li>
+            <li>Numeric</li>
+            <li>Special Characters</li>
+          </ul>
+        </div>
+        <div class="prompt-footer">
+          <button class="prompt-btn">Generate Password</button>
+        </div>
+      </div>
+      <div id="overlay"></div>
     </div>
     <script src="script.js"></script>
   </body>
