--- a/index.html
+++ b/index.html
@@ -25,8 +25,32 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button class="btn" id="generate">Generate Password</button>
+          <button class="btn" id="generatePopup" onclick="openForm()">Generate Password</button>
         </div>
+        <div id="password-popup">
+          <div class="popup-header">
+            <div class="title">Choose Criteria</div>
+            <button class="close-button" onclick="closeForm()">&times;</button>
+          </div>
+          <div id="settings">
+            <div class="setting">
+              <label for="length">Length</label>
+            <input type="number" id="length" value="16" min="8" max="128" />  
+            </div>
+            <div class="setting">
+              <label for="numbers">Include Numbers</label>
+              <input type="checkbox" id="numbers" checked />
+            </div>
+            <div class="setting">
+              <label for="symbols">Include Symbols</label>
+              <input type="checkbox" id="symbols" checked />
+            </div>
+          </div>
+          <div id="popup-footer">
+            <button id="generateAnswer">Generate Password</button>
+          </div>
+        </div>
+        <div id="overlay"></div>
       </div>
     </div>
     <script src="script.js"></script>
