Added a copy button to allow the user to copy the password for use

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <button id="copy">Copy</button>
         <div class="card-footer">
           <button class="btn" id="generatePopup" onclick="openForm()">Generate Password</button>
         </div>
